WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13718
REGRESSION (
r21093
): editing/execCommand/5136770.html failing pixel test
https://bugs.webkit.org/show_bug.cgi?id=13718
Summary
REGRESSION (r21093): editing/execCommand/5136770.html failing pixel test
Justin Garcia
Reported
2007-05-14 18:51:32 PDT
The painted selection is wrong in editing/execCommand/5136770.html
Attachments
Fix
(2.11 KB, patch)
2007-05-15 01:13 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-05-14 23:27:03 PDT
Regressed in the lazy min/max pref widths patch, <
http://trac.webkit.org/projects/webkit/changeset/21093
>.
Dave Hyatt
Comment 2
2007-05-14 23:36:58 PDT
Interesting.
mitz
Comment 3
2007-05-15 01:13:34 PDT
Created
attachment 14560
[details]
Fix
Dave Hyatt
Comment 4
2007-05-15 01:15:22 PDT
Comment on
attachment 14560
[details]
Fix r=me
Andrew Wellington
Comment 5
2007-05-15 03:23:24 PDT
Landed in
r21483
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug