        Reviewed by Hyatt.

- fix http://bugs.webkit.org/show_bug.cgi?id=13718
          REGRESSION (r21093): editing/execCommand/5136770.html failing pixel test

        * rendering/RenderContainer.cpp:
        (WebCore::RenderContainer::removeChildNode): Moved the code that clears the
        selection when moving a selection border into the fast path.



Canonical link: https://commits.webkit.org/17922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21483 268f45cc-cd09-0410-ab3c-d52691b4dbfc